[tool.poetry]
name = "aacspeakhelper"
version = "0.1.0"
description = "A tool for windows to take text from the pasteboard or command line then translate or speak or both that string"
authors = ["will wade <willwade@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
PyAudio = "^0.2.14"
numpy = "1.26.4"
comtypes = "^1.4.6"
pytz = "^2024.1"
setuptools = "^74.0.0"
langcodes = {extras = ["ai"], version = "^3.4.0"}
deep-translator = {extras = ["ai"], version = "^1.11.4"}
posthog = "^3.6.0"
PySide6 = "^6.7.2"
translate = "^3.6.1"
configparser = "^7.1.0"
pyperclip = "^1.9.0"
pyinstaller = "^6.10.0"
py3-tts-wrapper = {extras = ["google", "googletrans", "microsoft", "sapi", "sherpaonnx"], version = "^0.9.16"}
python-dotenv = "^1.0.1"
cryptography = "^43.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
