[project]
name = "aacspeakhelper"
version = "0.1.0"
description = "A tool for windows to take text from the pasteboard or command line then translate or speak or both that string"
authors = [
    {name = "Will Wade", email = "willwade@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11,<3.13"

dependencies = [
    "PyAudio==0.2.14",
    "numpy==1.26.4",
    "comtypes==1.4.6",
    "pytz>=2024.1",
    "setuptools>=74.0.0",
    "langcodes>=3.4.0",
    "deep-translator[ai]>=1.11.4",
    "posthog>=3.6.0",
    "PySide6>=6.7.2",
    "translate>=3.6.1",
    "configparser>=7.1.0",
    "pyperclip>=1.9.0",
    "py3-tts-wrapper[google,googletrans,microsoft,sapi,sherpaonnx]>=0.9.16",
    "python-dotenv>=1.0.1",
    "cryptography>=43.0.1",
]

[project.optional-dependencies]
build = [
    "pyinstaller>=6.10.0",
]

[tool.uv]
requirements = [
    "PyAudio==0.2.14",
    "numpy==1.26.4",
    "comtypes==1.4.6",
    "pytz>=2024.1",
    "setuptools>=74.0.0",
    "langcodes>=3.4.0",
    "deep-translator[ai]>=1.11.4",
    "posthog>=3.6.0",
    "PySide6>=6.7.2",
    "translate>=3.6.1",
    "configparser>=7.1.0",
    "pyperclip>=1.9.0",
    "pyinstaller>=6.10.0",
    "py3-tts-wrapper[google,googletrans,microsoft,sapi,sherpaonnx]>=0.9.16",
    "python-dotenv>=1.0.1",
    "cryptography>=43.0.1",
]
