[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aacspeakhelper"
version = "0.1.0"
description = "A tool for windows to take text from the pasteboard or command line then translate or speak or both that string"
authors = [
    {name = "Will Wade", email = "willwade@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11,<3.13"

dependencies = [
    "PyAudio",
    "numpy",
    "comtypes",
    "pytz",
    "setuptools",
    "langcodes",
    "deep-translator[ai]",
    "posthog",
    "PySide6",
    "translate",
    "configparser",
    "pyperclip",
    "py3-tts-wrapper[elevenlabs,google,googletrans,microsoft,openai,playht,polly,sherpaonnx,watson,witai]>=0.10.6",
    "python-dotenv",
    "cryptography",
    "pyinstaller", # Move to main dependencies since it's needed for distribution
    "pywin32>=310",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "black",  # for code formatting
    "ruff",   # for linting
    "pytest", # for testing
]

# Keep build for backward compatibility if needed
build = [
    "pyinstaller",
]

[tool.setuptools]
py-modules = [
    "client",
    "AACSpeakHelperServer",
    "configure_enc_utils",
    "utils",
    "tts_utils"
]
packages = ["GUI_TranslateAndTTS"]
