[project]
name = "aacspeakhelper-config"
version = "0.1.0"
description = "Configuration manager for AACSpeakHelper"
requires-python = ">=3.10"
dependencies = [
    "dearpygui",
    "py3-tts-wrapper[google,googletrans,microsoft,elevenlabs,playht,sherpaonnx]==0.9.26",
    "cryptography",
    "langcodes",
    "deep-translator[ai]",
    "configparser"
]

[project.optional-dependencies]
dev = [
    "ruff",
    "black",
    "mypy",
    "pytest"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true 