[project]
name = "ConfigManager"
version = "0.1.0"
description = "Configuration Manager for AACSpeakHelper"
requires-python = ">=3.11"
dependencies = [
    "dearpygui",
    "cryptography",
    "py3-tts-wrapper[google,googletrans,microsoft,elevenlabs,playht,sherpaonnx]>=0.9.27",
    "deep-translator",
    "langcodes"
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true 